--- a/workspace-spring-tool-suite/algalog-api/src/main/resources/application.properties
+++ b/workspace-spring-tool-suite/algalog-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/algalog?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Kiaramaya1$
+spring.datasource.username=mysql
+spring.datasource.password=mysql
 
 spring.jpa.show-sql=true
